fix: horizontal line was not visible

--- a/src/app/markdown.css
+++ b/src/app/markdown.css
@@ -175,7 +175,6 @@
     margin-bottom: 0.5em;
     color: var(--color-black);
     background-color: var(--color-black);
-    border: 0;
     height: 1px;
 }
 
